<resources>
    <string name="app_name">MyClass-IK-2B</string>
    <string name="no">Nomor</string>
    <string name="nama">Nama</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="update">Update</string>
    <string name="informasi">Aplikasi ini berisi daftar mahasiswa kelas IK-2B Politeknik Negeri Semarang. Digunakan untuk pendataan mahasiswa. Fitur yang dimiliki dapat menambah, update, dan hapus data dari kelas IK-2B.</string>
    <string name="owner">Created By: Raiza</string>
    <string name="version">Version: 1.1</string>
    <string name="email">praditaramadhan00@gmail.com</string>
</resources>
